--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,9 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+
+body {
+  background: linear-gradient(141deg, rgba(30,67,221,1) 26%, rgba(69,185,252,1) 100%);
+  height: 100vh;
+}
