--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,2 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<h1>RDVIDEO</h1>
+<p>Prenez rdv en video avec un professeur de Yoga, coach professionnel...</p>
