--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -12,3 +12,18 @@
     margin-bottom: 2%;
   }
 }
+
+.profile_form {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5%;
+  padding: 4%;
+  border-radius: 5%;
+  background: white;
+
+  h2{
+    text-align: center;
+    margin-bottom: 2%;
+  }
+}
