--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,3 +1,2 @@
-<h2>Dashboard</h2>
+<h2><%= @user.first_name %> <%= @user.last_name %> - <%= @profile.profession %></h2>
 
-<%= link_to "Ajouter vos disponibilités", new_profile_availability_path(@profile), class: "btn-gradient" %>
