--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -13,7 +13,7 @@
       <% if user_signed_in? %>
         <% if Profile.exists?(user_id: current_user.id) %>
           <li class="nav-item">
-            <%= link_to "Dashboard", profile_path(current_user.profile), class: "nav-link" %>
+            <%= link_to "Dashboard", dashboard_profile_path(current_user.profile), class: "nav-link" %>
           </li>
         <% else %>
           <li class="nav-item active">
