--- a/app/views/availabilities/new.html.erb
+++ b/app/views/availabilities/new.html.erb
@@ -1,14 +1,8 @@
-<h2>Vos disponibilités</h2>
+<header>Vos disponibilités</header>
 <div class="container py-5">
 
   <!-- For Demo Purpose -->
-  <header class="text-center text-white mb-5">
-    <h1 class="display-4">Bootstrap Calendar</h1>
-    <p class="font-italic mb-0">A nicely-designed Bootstrap calendar widget. This calendar is just a for design purpose, you can make it work.</p>
-    <p class="font-italic">Snippet By <a href="https://bootstrapious.com" class="text-white">
-        <u>Bootstrapious</u></a>
-    </p>
-  </header>
+
 
 
   <!-- Calendar -->
