--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,25 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class= "entete">
+  <h1>Bienvenu chez Rdvideo</h1>
+  <p> Prenez rdv avec un professionnel à distance </p>
+  <p></p>
+</div>
+
+<input type="text" class="seaedhhome">
+
+
+<div class="cards">
+      <%= image_tag 'index.jpg' %>
+      <%= image_tag 'yoga.jpg' %>
+      <%= image_tag 'video2.jpg' %>
+</div>
+
+  <div class="coachinghome">
+    <h5>Coaching</h5>
+  </div>
+  <div class="sporthome">
+    <h5>Sport</h5>
+  </div>
+  <div class= "mockuphome">
+    <h5>Mockups</h5>
+  </div>
+
