--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,10 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+@import "components/cards";
+@import "components";
+
+
 
 
 body {
