--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -27,3 +27,15 @@
     margin-bottom: 2%;
   }
 }
+
+.form-query {
+  width: 500px;
+  margin: auto;
+}
+
+.form-submit {
+margin-left: 700px;
+transform: translate(368px, -40px);
+width: 224px;
+}
+
