--- a/app/views/profiles/dashboard.html.erb
+++ b/app/views/profiles/dashboard.html.erb
@@ -23,8 +23,13 @@
 <div class="card-dashboard">
   <%= link_to "Ajouter vos disponibilités", new_profile_availability_path(@profile), class: "btn-gradient" %>
   <%= link_to "Ajouter un créneau horraire", new_profile_timeslot_path(@profile), class: "btn-gradient" %>
-  <% @timeslots.each do |timeslot| %>
-    le <%= timeslot.date %> de <%= timeslot.from_time %> à <%= timeslot.to_time %>
-  <% end %>
+  <ul class="mt-4">
+    <% @timeslots.each do |timeslot| %>
+     <li>le <%= timeslot.date.strftime("%d/%m/%Y") %> de <%= timeslot.from_time.strftime("%k:%M")  %> à <%= timeslot.to_time.strftime("%k:%M") %></li>
+    <% end %>
+
+  </ul>
+
+
 </div>
 
