--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,22 +1,24 @@
   <% @profiles.each do |profile|%>
-<div class="cards">
-  <div>
-    <h5>
-    <%= profile.user.first_name %>
-    <%= profile.user.last_name %>
-    </h5>
-    <h6>
-   Profession: <%= profile.profession %>
-    </h6>
-    <p>
-    Description: <%= profile.description %>
-    <%= profile.user.email%>
-    <% profile.timeslots %>
-    </p>
-  </div>
-  </div>
+    <%= link_to profile_path(profile) do %>
+      <div class="cards">
+        <div>
+          <h5>
+            <%= profile.user.first_name %>
+            <%= profile.user.last_name %>
+          </h5>
+          <h6>
+            Profession: <%= profile.profession %>
+          </h6>
+          <p>
+            Description: <%= profile.description %>
+            <%= profile.user.email%>
+            <% profile.timeslots %>
+          </p>
+        </div>
+      </div>
+    <% end %>
   <% end %>
-</div>
+
 
 
 
