--- a/app/views/profiles/calendar.html.erb
+++ b/app/views/profiles/calendar.html.erb
@@ -21,7 +21,11 @@
         <li>
           <div class="date"><%= date.day %></div>
           <% timeslots.each do |timeslot| %>
-            <div class="event bg-primary"><%= timeslot.user.first_name %></div>
+            <% if timeslot.user_id.nil? %>
+              <div class="event bg-success">Disponible</div>
+            <% else %>
+              <div class="event bg-primary"><%= timeslot.user.first_name %></div>
+            <% end %>
           <% end %>
         </li>
       <% end %>
@@ -29,60 +33,8 @@
         <div class="date">2</div>
       </li>
       <li>
-        <div class="date">3</div>
-      </li>
-      <li>
-        <div class="date">4</div>
-      </li>
-      <li>
-        <div class="date">5</div>
-      </li>
-      <li>
-        <div class="date">6</div>
-      </li>
-      <li>
-        <div class="date">7</div>
-      </li>
-      <li>
-        <div class="date">8</div>
-      </li>
-      <li>
-        <div class="date">9</div>
-      </li>
-      <li>
-        <div class="date">10</div>
-      </li>
-      <li>
-        <div class="date">11</div>
-      </li>
-      <li>
-        <div class="date">12</div>
-      </li>
-      <li>
         <div class="date">13</div>
         <div class="event all-day begin span-2 bg-warning">Event Name</div>
-      </li>
-      <li>
-        <div class="date">14</div>
-      </li>
-      <li>
-        <div class="date">15</div>
-        <div class="event all-day end bg-success">Event Name</div>
-      </li>
-      <li>
-        <div class="date">16</div>
-      </li>
-      <li>
-        <div class="date">17</div>
-      </li>
-      <li>
-        <div class="date">18</div>
-      </li>
-      <li>
-        <div class="date">19</div>
-      </li>
-      <li>
-        <div class="date">20</div>
       </li>
       <li>
         <div class="date">21</div>
@@ -92,33 +44,6 @@
       <li>
         <div class="date">22</div>
         <div class="event bg-info">Event with Longer Name</div>
-      </li>
-      <li>
-        <div class="date">23</div>
-      </li>
-      <li>
-        <div class="date">24</div>
-      </li>
-      <li>
-        <div class="date">25</div>
-      </li>
-      <li>
-        <div class="date">26</div>
-      </li>
-      <li>
-        <div class="date">27</div>
-      </li>
-      <li>
-        <div class="date">28</div>
-      </li>
-      <li>
-        <div class="date">29</div>
-      </li>
-      <li>
-        <div class="date">30</div>
-      </li>
-      <li>
-        <div class="date">31</div>
       </li>
       <li class="outside">
         <div class="date">1</div>
@@ -135,9 +60,4 @@
     </ol>
   </div>
 </div>
-
-
-<%= month_calendar do |date| %>
-  <%= date.day %>
-<% end %>
 
