--- a/app/views/profiles/shared/_booking_calendar.html.erb
+++ b/app/views/profiles/shared/_booking_calendar.html.erb
@@ -1,33 +1,49 @@
 <div class="simple-calendar">
-  <div class="calendar-heading">
-    <%= link_to t('simple_calendar.previous', default: 'Previous'), calendar.url_for_previous_view %>
-    <span class="calendar-title"><%= t('date.month_names')[start_date.month] %> <%= start_date.year %></span>
-    <%= link_to t('simple_calendar.next', default: 'Next'), calendar.url_for_next_view %>
-  </div>
 
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <% date_range.slice(0, 7).each do |day| %>
-          <th><%= t('date.abbr_day_names')[day.wday] %></th>
-        <% end %>
-      </tr>
-    </thead>
+  <div class="container-calendar">
+    <div class="chevron">
+      <%= link_to "", calendar.url_for_previous_view, class: "fas fa-chevron-left" %>
+    </div>
 
-    <tbody>
-      <% date_range.each_slice(7) do |week| %>
-        <%= content_tag :tr, class: calendar.tr_classes_for(week) do %>
-          <% week.each do |day| %>
-            <%= content_tag :td, class: calendar.td_classes_for(day) do %>
-              <% if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(block) %>
-                <% capture_haml(day, sorted_events.fetch(day, []), &block) %>
-              <% else %>
-                <% block.call day, sorted_events.fetch(day, []) %>
+    <div class="calendar-profile">
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <% date_range.slice(0, 7).each do |day| %>
+              <th>
+                <div class="weekday">
+                  <%= t('date.day_names')[day.wday] %>
+                </div>
+                <div class="date-month">
+                  <%= day.day %>
+                  <%= t('date.abbr_month_names')[start_date.month] %>
+                </div>
+              </th>
+            <% end %>
+          </tr>
+        </thead>
+
+        <tbody>
+          <% date_range.each_slice(7) do |week| %>
+            <%= content_tag :tr, class: calendar.tr_classes_for(week) do %>
+              <% week.each do |day| %>
+                <%= content_tag :td, class: calendar.td_classes_for(day) do %>
+                  <% if defined?(Haml) && respond_to?(:block_is_haml?) && block_is_haml?(block) %>
+                    <% capture_haml(day, sorted_events.fetch(day, []), &block) %>
+                  <% else %>
+                    <% block.call day, sorted_events.fetch(day, []) %>
+                  <% end %>
+                <% end %>
               <% end %>
             <% end %>
           <% end %>
-        <% end %>
-      <% end %>
-    </tbody>
-  </table>
+        </tbody>
+      </table>
+    </div>
+
+    <div class="chevron">
+      <%= link_to "", calendar.url_for_next_view, class: "fas fa-chevron-right" %>
+    </div>
+
+  </div>
 </div>
