--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,3 +9,16 @@ margin: auto;
 .coachinghome {
   transform: translate(211px, 74px);
 }
+
+.banner-home {
+  background-size: cover;
+  background-position: center;
+  padding: 150px 0;
+  // background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url("background_arms.jpg");
+  width: 100%;
+  height: 87vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
