--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -12,3 +12,39 @@
   background: linear-gradient(#147EFF, #0F67DA);
   color: white;
 }
+
+.btn-flat {
+  color: #2A2A2A;
+  padding: 8px 24px;
+  border-radius: 30px;
+  border: 5px solid #fd0054;
+  transition: background 0.1s ease;
+  font-family: 'Luckiest Guy', cursive;
+  margin: 45px;
+}
+
+.btn-flat:hover {
+  background-color: #fd0054;
+  border: 5px solid #fd0054;
+}
+
+.btn-primary {
+  background-color: #fd0054;
+  border-color: #fd0054;
+}
+
+.btn-primary:hover {
+  background-color: #fd0054;
+  border-color: #fd0054;
+  color: black;
+}
+
+.btn-primary:active {
+  background-color: #fd0054;
+  border-color: #fd0054;
+}
+
+#hey {
+  display: block !important;
+  margin: 0 auto !important;
+}
