--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,13 +1,13 @@
 .card {
     background-color: #2a2a2a;
-    margin: 15px;
     border-radius: 5px;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
     border-radius: 5px;
     box-shadow: 0 0 15px rgba(0,0,0,0.2);
-    padding: 15px;
-    border: 5px solid #272727;
-
+    width:450px;
+    height: 300px;
+    margin-top: 80px;
+    margin-bottom: 80px;
 }
 
 .bloc-vp-cards {
@@ -21,8 +21,12 @@
 
 
 .card img {
-  width: 150x;
-  height: 250px;
+    width: 450px;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+    /* margin-left: 10px; */
+    padding: 10px;
 }
 
 .container {
