--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,7 @@
 
 <div class="banner-home" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(<%= asset_path 'home.jpg' %>);">
 <div class= "entete">
-  <h1>Bienvenu chez Rdvideo</h1>
-  <p> Prenez rdv avec un professionnel à distance </p>
+  <h2> Prenez rdv avec un professionnel à distance </h2>
 </div>
 
  <div class="form-banner">
