--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -2,8 +2,12 @@
   text-align: center;
   margin-bottom: 30px;
   color: white;
-
 }
+
+.entete h2 {
+  margin-bottom: 20px;
+  }
+
 .homecategory {
 justify-content: space-between;
 display: flex;
