--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,12 +1,16 @@
 .navbar-lewagon {
   justify-content: space-between;
-  background: transparent;
+  background: white;
 }
 
 .navbar-lewagon .navbar-collapse {
-  flex-grow: 1;
+  flex-grow: 0;
 }
 
 .navbar-lewagon .navbar-brand img {
+  width: 40px;
+}
+
+.avatar-home img {
   width: 40px;
 }
