--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,6 +13,10 @@
 @import "pages/index";
 @import "components/cards";
 @import "components";
+@import "components/footer";
+@import "components/form";
+
+
 
 
 
