--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 
-<div class="banner-home" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(<%= asset_path 'home.jpg' %>);">
+<div class="banner-home" style="background-image: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)), url(<%= asset_path 'home2.jpg' %>);">
 <div class= "entete">
     <h2> Prenez rdv avec un professionnel à distance </h2>
 
