--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
         <%= text_field_tag :query,
           params[:query],
           class: "form-control",
-          placeholder: "Trouve le le professionnel idéal"%>
+          placeholder: "Coach professionnel, prof de yoga..."%>
       </div>
       <div class="form-submit">
       <%= submit_tag "Search", class: "btn btn-primary" %>
