--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -29,3 +29,17 @@ margin: auto;
   justify-content: center;
   align-items: center;
 }
+
+.choisissez {
+    width: 350px;
+    text-align: center;
+    margin: auto;
+    margin-top: 24px;
+}
+
+.acces {
+   width: 350px;
+    text-align: center;
+    margin: auto;
+    margin-top: 24px;
+}
