--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,9 +18,6 @@
     </div>
   </div>
 </div>
-
-
-
 <div class="container">
   <div class="bloc-vp">
     <div class="bloc-vp-cards justify-content-around">
@@ -28,18 +25,26 @@
         <%= link_to new_user_registration_path do %>
           <%= image_tag 'yoga.jpg' %>
         <% end %>
+<div class="choisissez">
+    <p>Choisissez le professionnel et ainsi que le créneau
+    qui vous convient</p>
+  </div>
       </div>
        <div class="card">
         <%= link_to profiles_path do %>
         <%= image_tag 'video2.jpg' %>
         <% end %>
+  <div class= "acces">
+    <p>Accédez à votre rendez vous le jour J</p>
+  </div>
       </div>
     </div>
   </div>
 </div>
-
-
-
+<br>
+<br>
+<br>
+<br>
 
 
 
