--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -1,5 +1,5 @@
 .card {
-    background-color: #2a2a2a;
+    background-color: white;
     border-radius: 5px;
     text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
     border-radius: 5px;
@@ -26,7 +26,8 @@
     justify-content: center;
     align-items: center;
     /* margin-left: 10px; */
-    padding: 10px;
+    padding: 2px;
+    outline : black solid 3px;
 }
 
 .container {
