--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,7 @@
 <div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
-  <%= link_to root_path, class: "navbar-brand" do %>
+  <a class="navbar-brand" href="#">
     <%= image_tag "webcam.png" %>
-  <% end %>
-
+</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -10,38 +9,24 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <% if user_signed_in? %>
-        <% if Profile.exists?(user_id: current_user.id) %>
-          <li class="nav-item">
-            <%= link_to "Dashboard", dashboard_profile_path(current_user.profile), class: "nav-link" %>
-          </li>
-        <% else %>
-          <li class="nav-item active">
-            <%= link_to "Home", "#", class: "nav-link" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Messages", "#", class: "nav-link" %>
-          </li>
-        <% end %>
-        <li class="nav-item dropdown">
-            <% if current_user.photo.attached? && current.user.photo.key.present? %>
-                    <%= cl_image_tag current_user.photo.key, class: "avatar-large"  %>
-                  <% else %>
-                  <div class= "avatar-home">
-                    <%= image_tag("image_not_found.png")%>
-                    </div>
-                  <% end %>
 
-         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <%= link_to "Modifier", edit_user_registration_path, class: "dropdown-item" %>
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
-          </div>
-        </li>
-      <% else %>
-        <li class="nav-item active">
-          <%= link_to "Se connecter", new_user_session_path, class: "nav-link" %>
-        </li>
-      <% end %>
+
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Messages</a>
+      </li>
+      <li class="nav-item dropdown">
+        <img class="avatar dropdown-toggle" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" src="https://kitt.lewagon.com/placeholder/users/ssaunier" />
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+        </div>
+      </li>
     </ul>
   </div>
 </div>
+
+
+
