--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,14 +1,43 @@
 
 .card-dashboard{
-  background-color: white;
+  background-color: #f4f4f4;
   border-radius: 5px;
   width : 40%;
   margin : 20px;
   padding : 20px;
 }
 
+.card-dashboard1{
+  background-color: white;
+  border-radius: 5px;
+  width : 40%;
+  margin : 20px;
+  padding : 20px;
+      position: absolute;
+    transform: translate(627px, -235px);
+}
+
+.card-dashboard2{
+  background-color: white;
+  border-radius: 5px;
+  width : 40%;
+  margin : 20px;
+  padding : 20px;
+  width: 603px;
+  left: 300px;
+  transform: translate(157px, -7px);
+  position: relative;
+}
+
+.container {
+  width: 900px;
+}
+
+.container1 {
+  width:900px;
+}
 .tabs-underlined {
-  display: flex;
+  display: inline-block;
   align-items: center;
 }
 
@@ -25,4 +54,40 @@
 .tabs-underlined .tab-underlined.active {
   opacity: 1;
   border-bottom: 3px solid #555555;
+}
+
+/* Style the tab */
+.tab {
+  overflow: hidden;
+  border: 1px solid #ccc;
+  background-color: #f1f1f1;
+}
+
+/* Style the buttons that are used to open the tab content */
+.tab button {
+  background-color: inherit;
+  float: left;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 14px 16px;
+  transition: 0.3s;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+  background-color: #ddd;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  display: none;
+  padding: 6px 12px;
+  border: 1px solid #ccc;
+  border-top: none;
 }
