--- a/app/assets/stylesheets/pages/_index_profiles.scss
+++ b/app/assets/stylesheets/pages/_index_profiles.scss
@@ -14,6 +14,9 @@
   }
 
   .profile-info{
+  }
+
+  .header-profile{
     display: flex;
   }
 
@@ -25,25 +28,6 @@
     width: 10px;
   }
 
-  .button-timeslot{
-    background: #b8e9ff;
-    border-radius: 5px;
-    margin-top: 5px;
-    text-align: center;
-    padding: 4px;
-    a{
-      color: #025ca4;
-      text-decoration: none;
-    }
-    &:hover{
-      background: #4557a5;
-      color: white;
-      a{
-        color: white;
-        text-decoration: none;
-      }
-    }
-  }
 }
 
 .container-calendar{
