--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -14,8 +14,9 @@
   border: white 1px solid;
 }
 .avatar-square {
-  width: 40px;
-  border-radius: 0px;
+  width: 150px;
+  height: auto;
+  border-radius: 12px;
   box-shadow: 0 1px 2px rgba(0,0,0,0.2);
-  border: white 1px solid;
+  // border: white 1px solid;
 }
