--- a/app/assets/stylesheets/pages/_profile.scss
+++ b/app/assets/stylesheets/pages/_profile.scss
@@ -1,9 +1,76 @@
-.container-1{
-  display: flex;
-
-}
-
 .head-profile{
-  height: 100px;
   background-color: #405C70;
 }
+
+.container-flex{
+  display: flex;
+}
+
+.profile-avatar{
+  margin: 20px;
+}
+
+.main-container {
+  display: flex;
+  justify-content: center;
+}
+
+#profile-show-information {
+  // flex-grow: 1;
+  min-height: 400px;
+  padding-top: 20px;
+  padding-left: 20px;
+  // margin-right: 20px;
+
+
+  .card-profile-show-information{
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 10px;
+    padding: 10px;
+    margin-bottom: 10px;
+  }
+}
+
+#profile-show-booking {
+  // height: 100vh;
+
+  position: sticky;
+  top: 0;
+  padding-top: 20px;
+  // padding-right: 20px;
+  // min-width: 500px;
+
+
+
+  .card-profile-show-booking{
+    // min-width: 500px;
+    box-shadow: 0 0 15px rgba(0,0,0,0.2);
+    border-radius: 10px;
+    margin-bottom: 80px;
+    // background-color: #2a2a2a;
+    // text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+    // width:450px;
+    // height: 300px;
+    h5{
+      background: #007bff;
+      border-top-left-radius: 10px;
+      border-top-right-radius: 10px;
+      padding-bottom: 20px;
+      padding-top: 20px;
+      text-align: center;
+      color: white;
+    }
+
+  }
+}
+
+#profile-show-review {
+  padding-top: 20px;
+  padding-left: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  border-radius: 10px;
+  padding: 10px;
+}
+
